Configure dynamic CORS origins for production